# _IFRS_parsing

./: CLAUDE.md  convert.py  how_to_read_IFRS.md  pyproject.toml  restructure_md.py
.claude/: settings.json  settings.local.json
.claude/commands/: save.md  start.md
IFRS_docx/IAS_10XX/: 시행중_K-IFRS_제1001호_재무제표_표시(2023_개정_2021_타기준서_제정_수정목록_25-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1002호_재고자산(2007_제정_2017_타기준서_제정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1007호_현금흐름표(2024_개정_2021_타기준서_제정_수정목록_19-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1008호_회계정책_회계추정치_변경과_오류(2021_개정_2018_타기준서_개정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1010호_보고기간후사건(2008_개정_2019_타기준서_개정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1012호_법인세(2023_개정_2018_타기준서_개정_수정목록_25-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1016호_유형자산(2020_개정_2021_타기준서_제정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1019호_종업원급여(2018_개정_2021_타기준서_제정_수정목록_25-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1020호_정부보조금의_회계처리와_정부지원의_공시(2008_개정_2015_타기준서_제정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1021호_환율변동효과(2023_개정_2018_타기준서_개정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1023호_차입원가(2018_개정_2017_타기준서_제정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1024호_특수관계자공시(2014_개정_2013_타기준서_개정_수정목록_23-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1026호_퇴직급여제도에_의한_회계처리와_보고(2007_제정_2021_타기준서_개정_수정목록_24-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1027호_별도재무제표(2014_개정_2015_타기준서_제정_수정목록_25-1_2020_구성양식_변경_반영).docx  시행중_K-IFRS_제1028호_관계기업과_공동기업에_대한_투자(2018_개정_2021_타기준서_제정_수정목록_24-1_2020_구성양식_변경_반영).docx  (+10 more)
converter/: docx_parser.py  md_renderer.py  models.py
(+149 files in other folders)
