[project]
name = "kifrs-converter"
version = "0.1.0"
description = "K-IFRS docx → 구조 보존 마크다운 변환기"
requires-python = ">=3.12"
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
